--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     },
     "dependencies": {
         "admin-lte": "^3.0.0-alpha.2",
-        "sweetalert2": "^8.0.3",
+        "sweetalert2": "^8.13.0",
         "vform": "^1.0.1",
+        "vue-barcode": "^1.2.0",
         "vue-progressbar": "^0.7.5",
         "vue-router": "^3.0.2"
     }
